--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="uploadImage">Upload Image</string>
     <string name="upload_hint">Add a caption for photo</string>
     <string name="choose_from_library">Choose From Library</string>
+    <string name="use_camera">Use camera</string>
     <string name="title_activity_display_images">DisplayImages</string>
     <string name="title_activity_display_single_stream">DisplaySingleStream</string>
     <string name="imagePage">View All Streams</string>
