can view a single stream

--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="upload_hint">Add a caption for photo</string>
     <string name="choose_from_library">Choose From Library</string>
     <string name="title_activity_display_images">DisplayImages</string>
+    <string name="title_activity_display_single_stream">DisplaySingleStream</string>
     <string name="imagePage">View All Streams</string>
     <string name="uploadImageActivity"> Upload a new image</string>
     <string name="title_activity_image_upload">ImageUpload</string>
