--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="welcome">Welcome to Connexus</string>
+    <string name="ViewNearby">Nearby Pictures</string>
     <string name="uploadImage">Upload Image</string>
     <string name="upload_hint">Add a caption for photo</string>
     <string name="search_hint">Find streams</string>
@@ -18,6 +19,7 @@
     <string name="title_activity_display_single_stream">DisplaySingleStream</string>
     <string name="title_search_stream">SearchStream</string>
     <string name="imagePage">View All Streams</string>
+    <string name="subscribedStream">View All Subscribed Streams</string>
     <string name="showmoreActivity"> Show More </string>
     <string name="uploadImageActivity"> Upload a new image</string>
     <string name="title_activity_image_upload">ImageUpload</string>
@@ -46,6 +48,9 @@
     <string name="request_server_auth_code">Request server auth code?</string>
     <string name="configuration_error">Error: the value of WEB_CLIENT_ID or SERVER_BASE_URL is not  set correctly. This will cause errors when requesting a server auth code.</string>
     <string name="title_activity_camera">Camera</string>
+    <string name="title_activity_view_subscribed_stream">ViewSubscribedStream</string>
+    <string name="title_activity_view_nearby">ViewNearby</string>
+    <string name="title_activity_show_more">ShowMore</string>
 
 
 </resources>
